--- a/package.json
+++ b/package.json
@@ -9,47 +9,25 @@
     "yarn": "0.17.4"
   },
   "scripts": {
-    "bundle": "rm -rf ../dist/*.js && ./node_modules/.bin/webpack --config webpack.config.js"
+    "build": "npm run build-js && npm run build-css",
+    "watch": "npm run watch-js && npm run watch-css",
+    "build-js": "babel src/house-of-isometric.js --out-file dist/house-of-isometric.js",
+    "watch-js": "babel --watch src/house-of-isometric.js --out-file dist/house-of-isometric.js",
+    "build-css": "node-sass --include-path scss src/house-of-isometric.scss dist/house-of-isometric.css",
+    "watch-css": "node-sass -w --include-path scss src/house-of-isometric.scss dist/house-of-isometric.css"
   },
   "repository": "https://github.com/antistatique/house-of-isometric",
   "author": "Julien Minguely <jminguely@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "autoprefixer": "^7.0.1",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.8",
-    "babel-plugin-transform-object-rest-spread": "^6.19.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-stage-3": "^6.17.0",
-    "babel-register": "^6.18.0",
-    "gulp-clean-css": "^3.2.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-load-plugins": "^1.5.0",
-    "gulp-notify": "^3.0.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-postcss": "^7.0.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^3.1.0",
-    "gulp-size": "^2.1.0",
-    "gulp-sourcemaps": "^2.6.0",
-    "gulp-uglify": "^2.1.2",
-    "gulp-util": "^3.0.8",
-    "jquery": "^3.2.1",
-    "postcss-reporter": "^3.0.0",
-    "stylelint": "^7.10.1",
-    "stylelint-config-standard": "^16.0.0",
-    "webpack": "2.1.0-beta.22",
-    "webpack-stream": "^3.2.0"
-  },
-  "devDependencies": {
-    "babel-core": "6.18.2",
+    "babel-cli": "^6.24.1",
+    "babel-plugin-transform-es2015-spread": "^6.22.0",
     "babel-preset-es2015": "^6.24.1",
-    "eslint": "^3.11.1",
-    "eslint-config-airbnb": "^13.0.0",
-    "eslint-plugin-import": "^2.2.0",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "webpack-split-by-path": "^2.0.0"
-  }
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-watch": "^2.0.6",
+    "babelify": "^7.3.0",
+    "browserify": "^14.3.0",
+    "node-sass": "^4.5.2"
+  },
+  "devDependencies": {}
 }
