--- a/package.json
+++ b/package.json
@@ -27,7 +27,15 @@
     "babel-watch": "^2.0.6",
     "babelify": "^7.3.0",
     "browserify": "^14.3.0",
-    "node-sass": "^4.5.2"
+    "eslint": "^3.5.0",
+    "eslint-config-airbnb": "^11.1.0",
+    "eslint-plugin-import": "^1.15.0",
+    "eslint-plugin-jsx-a11y": "^2.2.2",
+    "eslint-plugin-react": "^6.3.0",
+    "node-sass": "^4.5.2",
+    "stylelint": "^7.10.1",
+    "stylelint-config-standard": "^16.0.0",
+    "stylelint-order": "^0.4.3"
   },
   "devDependencies": {}
 }
